Resolve "Sidebar nur auf der Veranstaltungsübersicht für Admins/Roots scrollbar machen, falls sie zu lang ist"
Closes #2936, #2934, #2931, #2930, #2929, and #2928

Merge request studip/studip!1977

--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -112,6 +112,67 @@
     }
 }
 
+html {
+    &:not(.responsive-display) {
+        #admin-courses-index {
+            #sidebar {
+                top: 50px;
+                transition: all var(--transition-duration) ease-in-out;
+
+                &.was-oversized {
+                    height: calc(100vh - 250px);
+                    overflow-y: auto;
+                    position: fixed;
+                    top: 155px;
+
+                    &.no-footer {
+                        height: calc(100vh - 200px);
+                    }
+                }
+
+                .widget-links {
+                    li.active {
+                        &::before,
+                        &::after {
+                            border: 0;
+                        }
+                    }
+                }
+            }
+
+            &.fixed {
+                #sidebar {
+                    height: calc(100vh - 125px);
+                    top: 35px;
+
+                    &.no-footer {
+                        height: calc(100vh - 100px);
+                    }
+                }
+            }
+
+            &.fullscreen-sidebar-shown {
+                #sidebar {
+                    top: 110px;
+
+                    &.was-oversized {
+                        height: calc(100vh - 200px);
+
+                        &.no-footer {
+                            height: calc(100vh - 150px);
+                        }
+
+                        &.fixed {
+                            top: 110px;
+                        }
+                    }
+                }
+            }
+
+        }
+    }
+}
+
 ul.widget-list {
     list-style: none;
     margin: 0;
